--- a/index.css
+++ b/index.css
@@ -9,6 +9,7 @@ body {
     -webkit-tap-highlight-color: transparent;
     background-color: var(--background-color);
     color: var(--color);
+    overflow: auto;
     margin: 0px;
 }
 
@@ -105,12 +106,26 @@ div.color {
     align-items: center;
     flex: auto;
     gap: 5px;
-    cursor: pointer;
     height: 150px;
+}
+
+div.color-fullscreen {
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+    top: 0px;
+    left: 0px;
+    height: 100%;
+    width: 100%;
+    z-index: 2;
 }
 
 div.color-text {
     display: none;
+    cursor: pointer;
     padding: 0px 10px;
 }
 
@@ -220,6 +235,7 @@ div.copied {
     width: 300px;
     bottom: 5%;
     left: 50%;
+    z-index: 3;
     transform: translate(-50%, 0%);
     transition: 0.8s;
 }
