--- a/index.css
+++ b/index.css
@@ -99,7 +99,17 @@ div.color-row-small {
     width: 100%;
 }
 
+div.color-grid {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 50px;
+    width: 100%;
+}
+
 div.color {
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -127,6 +137,58 @@ div.color-text {
     display: none;
     cursor: pointer;
     padding: 0px 10px;
+}
+
+div.color-text-like {
+    position: absolute;
+    display: none;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    cursor: pointer;
+    height: 20px;
+    width: 20px;
+    top: 10px;
+    left: 10px;
+}
+
+div.color-text-full {
+    position: absolute;
+    display: none;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    cursor: pointer;
+    height: 20px;
+    width: 20px;
+    top: 10px;
+    right: 10px;
+}
+
+div.color-text-check {
+    position: absolute;
+    display: none;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    cursor: pointer;
+    height: 20px;
+    width: 20px;
+    bottom: 10px;
+    right: 10px;
+}
+
+div.color-text-corner {
+    position: absolute;
+    display: none;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    cursor: pointer;
+    height: 20px;
+    width: 20px;
+    bottom: 10px;
+    left: 10px;
 }
 
 div.color-text:hover {
