--- a/index.css
+++ b/index.css
@@ -119,6 +119,18 @@ div.color {
     height: 150px;
 }
 
+div.cp-color {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex: auto;
+    gap: 5px;
+    height: 400px;
+    width: 100%;
+}
+
 div.color-fullscreen {
     position: fixed;
     display: flex;
@@ -355,6 +367,10 @@ button.theme-inverted:hover {
 
     div.color {
         width: 100%;
+    }
+
+    div.cp-color {
+        height: 200px;
     }
 
     button.load {
