--- a/index.css
+++ b/index.css
@@ -114,7 +114,7 @@ div.color {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    flex: auto;
+    flex: 1 1 0;
     gap: 5px;
     height: 200px;
 }
