--- a/index.css
+++ b/index.css
@@ -324,6 +324,19 @@ button.load {
     padding: 0px 15px;
 }
 
+button.theme-icon {
+    -webkit-tap-highlight-color: transparent;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 24px 24px;
+    background-color: var(--color);
+    color: var(--background-color);
+    font-family: monospace;
+    border: 1px solid var(--color);
+    cursor: pointer;
+    padding: 10px 20px;
+}
+
 button.theme {
     -webkit-tap-highlight-color: transparent;
     background-color: var(--color);
